--- a/Manbag/Manbag/Classes/HomeViewController.xib
+++ b/Manbag/Manbag/Classes/HomeViewController.xib
@@ -42,15 +42,15 @@
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUIView" id="40557716">
+							<object class="IBUIView" id="620890801">
 								<reference key="NSNextResponder" ref="453134492"/>
 								<int key="NSvFlags">292</int>
 								<array class="NSMutableArray" key="NSSubviews">
-									<object class="IBUIToolbar" id="1004998649">
-										<reference key="NSNextResponder" ref="40557716"/>
+									<object class="IBUIToolbar" id="200332254">
+										<reference key="NSNextResponder" ref="620890801"/>
 										<int key="NSvFlags">266</int>
 										<string key="NSFrameSize">{320, 44}</string>
-										<reference key="NSSuperview" ref="40557716"/>
+										<reference key="NSSuperview" ref="620890801"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -59,16 +59,16 @@
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 										<int key="IBUIBarStyle">1</int>
 										<array class="NSMutableArray" key="IBUIItems">
-											<object class="IBUIBarButtonItem" id="310272662">
+											<object class="IBUIBarButtonItem" id="75600131">
 												<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-												<reference key="IBUIToolbar" ref="1004998649"/>
+												<reference key="IBUIToolbar" ref="200332254"/>
 												<int key="IBUISystemItemIdentifier">5</int>
 											</object>
-											<object class="IBUIBarButtonItem" id="345211666">
+											<object class="IBUIBarButtonItem" id="960770626">
 												<string key="IBUITitle">Finish</string>
 												<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 												<int key="IBUIStyle">2</int>
-												<reference key="IBUIToolbar" ref="1004998649"/>
+												<reference key="IBUIToolbar" ref="200332254"/>
 											</object>
 										</array>
 									</object>
@@ -76,12 +76,12 @@
 								<string key="NSFrameSize">{320, 44}</string>
 								<reference key="NSSuperview" ref="453134492"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="1004998649"/>
+								<reference key="NSNextKeyView" ref="200332254"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
-									<object class="NSColorSpace" key="NSCustomColorSpace" id="881452919">
+									<object class="NSColorSpace" key="NSCustomColorSpace" id="295173478">
 										<int key="NSID">2</int>
 									</object>
 								</object>
@@ -91,7 +91,7 @@
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="40557716"/>
+						<reference key="NSNextKeyView" ref="620890801"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -101,12 +101,16 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIAlwaysBounceVertical">YES</bool>
 						<int key="IBUISeparatorStyle">1</int>
+						<object class="NSColor" key="IBUISeparatorColor">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MC42NjY2NjY2NjY3AA</bytes>
+						</object>
 						<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
 						<bool key="IBUIAllowsSelection">NO</bool>
 						<float key="IBUIRowHeight">44</float>
 						<float key="IBUISectionHeaderHeight">22</float>
 						<float key="IBUISectionFooterHeight">22</float>
-						<reference key="IBUITableHeaderView" ref="40557716"/>
+						<reference key="IBUITableHeaderView" ref="620890801"/>
 					</object>
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
@@ -116,7 +120,7 @@
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
-					<reference key="NSCustomColorSpace" ref="881452919"/>
+					<reference key="NSCustomColorSpace" ref="295173478"/>
 				</object>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 				<object class="IBUIScreenMetrics" key="IBUISimulatedDestinationMetrics">
@@ -143,7 +147,6 @@
 				<int key="NSvFlags">268</int>
 				<string key="NSFrameSize">{320, 400}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<bool key="IBUIClipsSubviews">YES</bool>
 				<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -233,7 +236,7 @@
 						<int key="objectID">4</int>
 						<reference key="object" ref="453134492"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="40557716"/>
+							<reference ref="620890801"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
 					</object>
@@ -244,30 +247,30 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">14</int>
-						<reference key="object" ref="40557716"/>
+						<reference key="object" ref="620890801"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="1004998649"/>
+							<reference ref="200332254"/>
 						</array>
 						<reference key="parent" ref="453134492"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">15</int>
-						<reference key="object" ref="1004998649"/>
+						<reference key="object" ref="200332254"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="345211666"/>
-							<reference ref="310272662"/>
+							<reference ref="960770626"/>
+							<reference ref="75600131"/>
 						</array>
-						<reference key="parent" ref="40557716"/>
+						<reference key="parent" ref="620890801"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">17</int>
-						<reference key="object" ref="310272662"/>
-						<reference key="parent" ref="1004998649"/>
+						<reference key="object" ref="75600131"/>
+						<reference key="parent" ref="200332254"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">16</int>
-						<reference key="object" ref="345211666"/>
-						<reference key="parent" ref="1004998649"/>
+						<reference key="object" ref="960770626"/>
+						<reference key="parent" ref="200332254"/>
 					</object>
 				</array>
 			</object>
